--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=dating.db"
-  }
+  },
+  "TokenKey": "Osmanthus wine tastes the same as i remember but where are those who share the memories?"
 }
